--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</li>
 					
 					<li>
-						<a href="https://vimeo.com/170267090" data-largesrc="images/full/altsndtrk.png" data-title="Alternative Soundtrack" data-description="Alternative Soundtrack. This is a project that helped me see that I could be an artist some day. Being an artist can be an existentially difficult identity, where creative expression is desired, but the valuing of the self is also needed to enforce creation." data-buttontext="">
+						<a href="https://vimeo.com/170267090" data-largesrc="images/full/altsndtrk.png" data-title="Alternative Soundtrack" data-description="Hear what you see - the frames of the video are mapped to audio. Here, clips from Oskar Fischinger&#39;s An Optical Poem are given a new soundtrack. A project developed while a student at the School of Machines, Making, and Make Believe. " data-buttontext="">
 							<img src="images/thumbs/altsndtrk-thumb.png" alt="altsndtrk"/>
 						</a>
 					</li>
