--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</li>
 					
 					<li>
-						<a href="https://vimeo.com/171751345" data-largesrc="images/full/altsndtrklive.png" data-title="Alternative Soundtrack Live" data-description="Alternative Soundtrack Live. Alternative soundtrack was evolved further in a collaboration with Si Se and aBe Pazos, and exhibited live at Lacuna Lab: Activation in Spektrum in Berlin. Get a sense of the soundtrack of the exhibition with this demo just using my hand." data-buttontext="">
+						<a href="https://vimeo.com/171751345" data-largesrc="images/full/altsndtrklive.png" data-title="Alternative Soundtrack Live" data-description="Alternative Soundtrack Live. Alternative soundtrack was evolved further in a collaboration with Se Sneaky and aBe Pazos, and exhibited live at Lacuna Lab: Activation in Spektrum in Berlin. Get a sense of the soundtrack of the exhibition with this demo just using my hand." data-buttontext="">
 							<img src="images/thumbs/altsndtrklive-thumb.png" alt="altsndtrk"/>
 						</a>
 					</li>
